--- a/src/main/resources/installer.fxml
+++ b/src/main/resources/installer.fxml
@@ -53,7 +53,7 @@
           alignment="CENTER"
     >
         <ImageView>
-            <Image url="Fearnixx UG112x112.png"/>
+            <Image url="FearNixx_UG112x112.png"/>
         </ImageView>
 
         <TextFlow>
